--- a/gnome-help/C/a11y-bouncekeys.page
+++ b/gnome-help/C/a11y-bouncekeys.page
@@ -32,27 +32,28 @@
       <name>Ekaterina Gerasimova</name>
       <email>kittykat3756@gmail.com</email>
     </credit>
+    <credit type="author">
+      <name>Jaiden Riordan</name>
+      <email>jade@fyralabs.com</email>
+    </credit>
 
-    <desc>Ignore quickly-repeated key presses of the same key.</desc>
+    <desc>Ignore quick presses of the same key.</desc>
   </info>
 
   <title>Turn on bounce keys</title>
 
-  <p>Turn on <em>bounce keys</em> to ignore key presses that are rapidly
-  repeated. For example, if you have hand tremors which cause you to press a
-  key multiple times when you only want to press it once, you should turn on
-  bounce keys.</p>
+<p>Turn on <em>bounce keys</em> to ignore key presses that are rapidly
+  repeated. If you have hand tremors or a similar condition bounce keys may be useful to you</p>
 
   <steps>
     <item>
-      <p>Open the <gui xref="shell-introduction#activities">Activities</gui> 
-      overview and start typing <gui>Settings</gui>.</p>
+      <p>Press the menu button on the dock *GUI Stuff here*<p>
     </item>
     <item>
       <p>Click on <gui>Settings</gui>.</p>
     </item>
     <item>
-      <p>Click <gui>Accessibility</gui> in the sidebar to open the panel.</p>
+      <p>Click <gui>Accessibility</gui> in the sidebar.</p>
     </item>
     <item>
       <p>Press <gui>Typing Assist (AccessX)</gui> in the <gui>Typing</gui>
@@ -66,16 +67,13 @@
   <note style="tip">
     <title>Quickly turn bounce keys on and off</title>
     <p>You can turn bounce keys on and off by clicking the
-    <link xref="a11y-icon">accessibility icon</link> on the top bar and
-    selecting <gui>Bounce Keys</gui>. The accessibility icon is visible when
-    one or more settings have been enabled from the <gui>Accessibility</gui>
-    panel.</p>
+    <link xref="a11y-icon">accessibility icon</link> on the panel and
+    selecting <gui>Bounce Keys</gui>. The accessibility icon shows up if you've enabled one or more accessibility options.</p>
   </note>
 
   <p>Use the <gui>Acceptance delay</gui> slider to change how long bounce keys
-  waits before it registers another key press after you pressed the key for the
+  waits before it registers another press after you pressed the key for the
   first time. Select <gui>Beep when a key is rejected</gui> if you want the
-  computer to make a sound each time it ignores a key press because it happened
-  too soon after the previous key press.</p>
+  computer to make a sound each time it ignores a press.</p>
 
 </page>
